few more bug fixes with css alignment

--- a/front/apps/landing/src/styles/faqs.scss
+++ b/front/apps/landing/src/styles/faqs.scss
@@ -27,6 +27,7 @@
         align-items: center;
         justify-content: space-between;
         gap: 1em;
+        padding: 0;
 
         span {
             font-size: 1rem;
