--- a/front/apps/landing/src/styles/header.scss
+++ b/front/apps/landing/src/styles/header.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     height: 3em;
     margin: 0 auto;
-    padding: .5em;
+    padding: .5em 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
