--- a/front/apps/landing/src/styles/walk-through.scss
+++ b/front/apps/landing/src/styles/walk-through.scss
@@ -45,7 +45,7 @@
     inset: 0;
     z-index: 1;
     background-size: cover;
-    mask-image: url('../../public/phoneMask23v.svg');
+    mask-image: url('../../public/phoneMask24v.svg');
     mask-size: 100% auto;
     mask-mode: alpha;
     mask-repeat: no-repeat;
